# dont-forget-the-tea

./: LICENSE  README.md
reason-react-frontend/: .gitignore  README.md  index.html  indexProduction.html  package.json
reason-react-frontend/src/: Index.re
rust-tide-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
rust-tide-backend/config/: default.toml
rust-tide-backend/src/: app.rs  error.rs  main.rs
rust-tide-backend/src/data/: grocery.rs  mod.rs
rust-tide-backend/src/handler/: grocery.rs  mod.rs  util.rs
rust-tide-backend/src/settings/: env.rs  logging.rs  mod.rs
rust-warp-backend/: .gitignore  Cargo.toml  api_specs.md  dftt.postman_collection.json
rust-warp-backend/config/: Default.toml  Development.toml
rust-warp-backend/db/: init.sql
rust-warp-backend/src/: error.rs  handler.rs  main.rs
rust-warp-backend/src/data/: mod.rs
rust-warp-backend/src/settings/: logging.rs  mod.rs
