[package]
name = "rust-tide-backend"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
async-std = { version = "1.2.0", features = ["attributes"] }
fern = "0.5.8"
log = "0.4.8"
chrono = { version = "0.4.9", features = ["serde"] }
config = "0.9.3"
thiserror = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
futures = { version = "0.3", features = ["async-await"] }
tide = "0.4.0"


[profile.dev]
debug = 0


