[package]
name = "rust-warp-backend"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = "0.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fern = "0.6.0"
prometheus = { version = "0.8.0", features = ["process"] }
config = "0.10.1"
log = "0.4.8"
lazy_static = "1.4.0"
sqlx = { version = "0.3.5", features = ["sqlite"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
